# ucx_playground

./: .gitignore  .pre-commit-config.yaml  README.md
cpp/: CMakeLists.txt
cpp/cmake/: FindUCX.cmake
cpp/src/: common_utils.h  data_util.cpp  data_util.h  hello_epoll.c  hello_ucx.cpp  hello_world_util.h  main.cpp  memory_utils.cpp  memory_utils.h  print_utils.cpp  print_utils.h  simple_ucp_client.cpp  simple_ucp_server.cpp  ucp_client.cpp  ucp_client.h  ucp_hello_world.c  ucp_hello_world_v2.cpp  ucp_server.cpp  ucp_server.h  ucp_util.h  ucx_config.cpp  ucx_config.h  ucx_handlers.h  ucx_utils.cpp  ucx_utils.h
